--- a/package.json
+++ b/package.json
@@ -20,13 +20,44 @@
   },
   "homepage": "https://github.com/zoromask/ng-excel-table#readme",
   "devDependencies": {
+    "browser-sync": "~1.7.1",
+    "chalk": "~0.5.1",
+    "del": "~0.1.3",
     "gulp": "^3.9.1",
+    "gulp-angular-filesort": "~1.0.4",
+    "gulp-angular-templatecache": "~1.4.2",
+    "gulp-autoprefixer": "~2.0.0",
+    "gulp-chmod": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-consolidate": "~0.1.2",
+    "gulp-csso": "~0.2.9",
+    "gulp-filter": "~1.0.2",
+    "gulp-flatten": "~0.0.4",
+    "gulp-inject": "~1.0.2",
     "gulp-insert": "^0.5.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-karma": "0.0.5",
+    "gulp-less": "~1.3.6",
+    "gulp-load-plugins": "~0.7.1",
+    "gulp-minify-html": "~0.1.7",
+    "gulp-ng-annotate": "~1.1.0",
+    "gulp-protractor": "~0.0.11",
+    "gulp-rename": "~1.2.0",
+    "gulp-replace": "~0.5.0",
+    "gulp-rev": "~2.0.1",
+    "gulp-rev-replace": "~0.3.1",
+    "gulp-size": "~1.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-useref": "~1.0.2",
+    "http-proxy": "~1.7.0",
     "jshint": "^2.9.1",
-    "jshint-stylish": "^2.1.0"
+    "jshint-stylish": "^2.1.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "main-bower-files": "~2.4.0",
+    "protractor": "~1.4.0",
+    "require-dir": "~0.1.0",
+    "wiredep": "~2.2.0"
   }
 }
