--- a/bower.json
+++ b/bower.json
@@ -14,15 +14,12 @@
   ],
   "license": "MIT",
   "homepage": "index.html",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
   "dependencies": {
-    "angular": "^1.5.3"
+    "angular": "^1.5.3",
+    "angular-bootstrap": "^1.3.1",
+    "bootstrap": "3.3.4",
+    "font-awesome": "fontawesome#^4.6.1",
+    "isteven-angular-multiselect": "^4.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.3",
