--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-bootstrap": "^1.3.1",
     "bootstrap": "3.3.4",
     "font-awesome": "fontawesome#^4.6.1",
-    "isteven-angular-multiselect": "^4.0.0"
+    "isteven-angular-multiselect": "^4.0.0",
+    "angular-sanitize": "^1.5.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.3",
