--- a/bower.json
+++ b/bower.json
@@ -15,15 +15,15 @@
   "license": "MIT",
   "homepage": "index.html",
   "dependencies": {
-    "angular": "^1.5.3",
-    "angular-bootstrap": "^1.3.1",
+    "angular": "1.3.17",
     "bootstrap": "3.3.4",
-    "font-awesome": "fontawesome#^4.6.1",
-    "isteven-angular-multiselect": "^4.0.0",
-    "angular-sanitize": "^1.5.5"
+    "angular-bootstrap": "^1.3.1",
+    "isteven-angular-multiselect": "^4.0.0"
   },
   "devDependencies": {
+    "font-awesome": "fontawesome#^4.6.1",
     "angular-mocks": "^1.5.3",
-    "jquery": "^2.2.3"
+    "jquery": "^2.2.3",
+    "angular-sanitize": "^1.5.5"
   }
 }
