--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "angular": "1.3.17",
     "bootstrap": "3.3.4",
-    "angular-bootstrap": "^1.3.1",
+    "angular-bootstrap": "0.12.0",
     "isteven-angular-multiselect": "^4.0.0"
   },
   "devDependencies": {
